Feat: AutoConfiguratin.imports 추가 및 properties 객체 수정